# AsyncVLA-Runtime

./: .gitignore  .gitmodules  README.md  launch_client.sh  launch_edge_compare_server.sh  pyproject.toml  test_yolo_world_camera.sh
asyncvla_pi/: __init__.py  edge_adapter_model.py  edge_robot_client.py  hailo_edge_runner.py  hybrid_edge_runner.py  image_ring_buffer.py  pd_controller.py  policy_payload.py  token_quant.py  torch_edge_runner.py
client/: pyproject.toml
export/: compile_edge_to_hef.sh  export_edge_fused_to_onnx.py  export_edge_to_onnx.py
lerobot_policy_asyncvla_base/: __init__.py  configuration_asyncvla_base.py  modeling_asyncvla_base.py
raspi_mobile_robot/: __init__.py  configuration_raspi_mobile.py  robot.py
scripts/: analyze_edge_onnx_layerwise_diff.py  benchmark_base_vla_server.py  build_calib_from_lelan.py  build_edge_hef_docker.py  build_edge_profile_with_preproc.py  build_runtime_uint8_calib_pack.py  build_token_quant_params.py  collect_calib_data.py  collect_nav_calib_data.py  collect_nav_calib_data_flickr.py  compare_hf_edge_adapter_precisions.py  compare_official_demo_outputs.py  compare_torch_hailo_edge_outputs.py  demo_edge_server_visual.py  demo_lekiwi_client.py  evaluate_local_edge_runner_candidates.py  evaluate_remote_edge_compare_server.py  evaluate_remote_edge_hef_candidates.py  run_base_vla_server.py  run_pi_edge_client.py  run_pi_edge_compare_server.py  test_camera.py  test_connect_lekiwi.py  test_edge_adapter_hf_hailo.py  test_yolo_world.py  test_yolo_world_camera.py  visualize_remote_edge_compare_models.py
tests/: test_base_vla_policy_server.py  test_benchmark_base_vla_server.py  test_edge_adapter_hf_export.py  test_edge_robot_client_payload.py  test_hailo_edge_runner_names.py  test_hailo_edge_runner_quant.py  test_policy_payload.py  test_run_pi_edge_client.py  test_torch_edge_runner.py
