[project]
name = "asyncvla-runtime"
version = "0.1.0"
description = "Split-inference runtime scaffold for AsyncVLA (workstation + Pi/Hailo)"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "efficientnet-pytorch==0.7.1",
    "numpy<2",
    "onnx",
    "onnxruntime",
    "pillow",
    "pyyaml",
    "requests",
    "opencv-python>=4.11.0.86",
    "hailort",
]

[tool.uv]
package = false

[tool.uv.sources]
hailort = { path = "hailort-5.2.0-cp310-cp310-linux_aarch64.whl" }
